<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:layout_margin="10dp"
    android:background="@drawable/b89830d20133e79dc8a759a912f6e435">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:text="My Profile"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="30dp"
        android:gravity="center"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fname"
        android:textColorHint="#FFFFFF"
        android:hint="@string/first_name"
        android:inputType="text"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lname"
        android:textColorHint="#FFFFFF"
        android:inputType="text"
        android:hint="@string/last_name"/>
<!--    <EditText-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:id="@+id/smail"-->
<!--        android:textColorHint="#FFFFFF"-->
<!--        android:hint="@string/e_mail"-->
<!--        android:inputType="textEmailAddress"/>-->
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Gender"
            android:textColor="#FFFFFF"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Male"
            android:id="@+id/male"
            android:textColor="#FFFFFF" />
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Female"
            android:id="@+id/female"
            android:textColor="#FFFFFF"/>
    </RadioGroup>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/height"
        android:textColorHint="#FFFFFF"
        android:inputType="numberDecimal"
        android:hint="@string/height"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/weight"
        android:textColorHint="#FFFFFF"
        android:inputType="numberDecimal"
        android:hint="@string/weight"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/address"
        android:textColorHint="#FFFFFF"
        android:inputType="text"
        android:hint="@string/address"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/phone"
        android:textColorHint="#FFFFFF"
        android:inputType="phone"
        android:hint="@string/phone_number"/>
<!--    <EditText-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:id="@+id/spw"-->
<!--        android:textColorHint="#FFFFFF"-->
<!--        android:inputType="textPassword"-->
<!--        android:hint="@string/password"/>-->
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chose_user_type"
            android:textColor="#FFFFFF"/>
    <RadioButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/admin"
        android:id="@+id/admin"
        android:textColor="#FFFFFF" />
    <RadioButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user"
        android:id="@+id/user"
        android:textColor="#FFFFFF"/>
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_gravity="center"
        android:id="@+id/save"
        android:text="@string/save" />

</LinearLayout>